...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/profileLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:paddingBottom="10sp">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/userPhoto"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/user_photo_default"
                    android:elevation="5dp"
...
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_man"
                    app:civ_border_width="3dp"
                    app:civ_border_color="#ecf0f1"/>

                <TextView
                    android:id="@+id/userNickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/userPhoto"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:text="Default"
                    android:textColor="#636e72"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/userStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/userNickname"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:text="Default Status"
                    android:textColor="#636e72"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/userInterests"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/userStatus"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="9dp"
                    android:text="Default Interests" />
...

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/nicknameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Nickname" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/statusInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Status" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/interestsInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Interests" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/radiusLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_profile_photo"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="Radius"
                    android:textColor="#636e72"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/radiusValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="2dp" />

                <SeekBar
                    android:id="@+id/radiusBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="10000"
                    android:progress="1000" />

                <TextView
                    android:id="@+id/spokenLanguages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    android:textStyle="italic" />

                <Button
                    android:id="@+id/languagesButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Select languages" />

                <android.support.design.button.MaterialButton
                    android:id="@+id/saveButton"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:backgroundTint="#00b894"
                    android:text="Save"
...
