...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

    <FrameLayout
        android:id="@+id/fcontainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/navigationView"
    />

    <android.support.design.widget.BottomNavigationView
...
