...
    <string name="app_name">Radius</string>
    <string name="settings">Settings</string>
    <string name="log_out_button">Log Out of My Account</string>
    <string name="radius_logo">Radius Logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok_label">OK</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clearAll_label">Clear all</string>

    <!-- Preferences Page Strings -->
    <string name="incognitoKey">incognitoSwitch</string>
    <string name="incognitoTitle">Incognito mode</string>
...
